@@ -1,0 +1,5 @@
+include $(top_srcdir)/examples/Makefile.am_fragment
+
+noinst_PROGRAMS = test
+test_SOURCES = main.cc
+
