@@ -1,3 +1,11 @@
+2008-10-08  Murray Cumming  <murrayc@murrayc.com>
+
+	* Makefile.am:
+	* configure.in:
+	* tests/Makefile.am:
+	* tests/child_properties/: Added a test
+	for get_child_property().
+
 0.11.0:
 
 2008-09-13  Murray Cumming  <murrayc@murrayc.com>
